[add] WordActivity layout
경제 단어 사전 액티비티 추가, 투명도 설정

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">MoneyMani</string>
     <string name="start_name">MONEY\nMANI</string>
+    <string name="word_title">경제 단어 사전</string>
 </resources>
