--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,18 @@
 <resources>
+    // 시작 페이지
     <string name="app_name">MoneyMani</string>
     <string name="start_name">MONEY\nMANI</string>
-    <string name="word_title">경제 단어 사전</string>
+
+    // 경제 단어 사전
+    <string name="word_page_title">경제 단어 사전</string>
+    <string name="word_name">단어 이름</string>
+    <string name="word_mean">단어 뜻입니다.</string>
+
+    // 바텀 네비게이션 바
+    <string name="word_page">경제 단어 사전</string>
+    <string name="news_page">뉴스</string>
+    <string name="policy_page">정책</string>
+    <string name="memo_page">메모</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
