--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,11 @@
     <string name="policy_name">정책 이름입니다.</string>
     <string name="policy_mean">정책 내용입니다.</string>
 
+    // 메모
+    <string name="main_title">메모 목록</string>
+    <string name="add_toto_txt">메모 추가</string>
+    <string name="title">제목</string>
+
     // 바텀 네비게이션 바
     <string name="word_page">경제 단어 사전</string>
     <string name="news_page">뉴스</string>
